# CMDChain

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml
cmd_chain/: __init__.py  server.py
cmd_chain/agent/: __init__.py  config.py  llm_agent.py  router.py
cmd_chain/scripts/: lint.py
scripts/: lint.py
test/: some.txt
